# MCP-PromptCraft

./: .gitignore  README.md  README.zh-CN.md  promptcraft.config.example.json  pyproject.toml
examples/: mcp_usage.md  minimal_task.json
promptcraft/: __init__.py  __main__.py  artifact_cleanup.py  classifier.py  cli.py  compressor.py  config.py  context_selector.py  features.py  instruction_builder.py  mcp_server.py  memory_classifier.py  models.py  prompt_context.py  prompt_files.py  router.py  service.py  stage_manager.py  state_store.py
promptcraft/skills/Few-Shot Chain-of-Thought/: SKILL.md
promptcraft/skills/Few-Shot Prompting/: SKILL.md
promptcraft/skills/Least-to-Most Prompting/: SKILL.md
promptcraft/skills/Step-Back Prompting/: SKILL.md
promptcraft/skills/Tree of Thoughts Prompting/: SKILL.md
promptcraft/skills/Zero-Shot Chain-of-Thought/: SKILL.md
promptcraft/skills/Zero-Shot Prompting/: SKILL.md
scripts/: windows_dev_env.ps1
tests/: test_classifier.py  test_cli.py  test_compressor.py  test_config.py  test_context_selector.py  test_instruction_builder.py  test_mcp_server.py  test_memory_classifier.py  test_router.py  test_stage_manager.py  test_state_store.py
